# paramdef

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: audit.toml  config.local.toml.example  config.toml
.claude/: settings.local.json
.claude/skills/context7-docs/: SKILL.md
.claude/skills/filesystem/: SKILL.md
.claude/skills/rust-async/: SKILL.md
.claude/skills/rust-docs/: SKILL.md
.claude/skills/rust-error-handling/: SKILL.md
.claude/skills/rust-ffi/: SKILL.md
.claude/skills/rust-modern-features/: SKILL.md
.claude/skills/rust-ms-applications/: SKILL.md
.claude/skills/rust-ms-libraries/: SKILL.md
.claude/skills/rust-ms-universal/: SKILL.md
.claude/skills/rust-patterns/: SKILL.md
.claude/skills/rust-performance/: SKILL.md
.claude/skills/rust-project-structure/: SKILL.md
.claude/skills/rust-refactor/: SKILL.md
.claude/skills/rust-safety/: SKILL.md
.claude/skills/rust-security/: SKILL.md
.claude/skills/rust-tdd/: SKILL.md
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  codspeed.yml  docs.yml  release.yml
benches/: containers.rs  core_types.rs  parameters.rs  runtime.rs  schema_context.rs  value.rs
docs/: 00-TYPE-GRAPH.md  01-ARCHITECTURE.md  02-TYPE-SYSTEM.md  03-SUBTYPES-AND-UNITS.md  04-TRANSFORMERS.md  05-VALIDATION.md  06-UI-AND-I18N.md  07-ADVANCED-PATTERNS.md  08-EVENT-SYSTEM.md  09-UNDO-REDO.md  10-DIAGRAMS.md  11-FLAGS-REFERENCE.md  12-SCHEMA-CONTEXT.md  13-INDUSTRY-REFERENCE.md  14-API-EXAMPLES.md  15-QUICK-REFERENCE.md  16-SUBTYPE-GUIDE.md  17-DESIGN-DECISIONS.md  18-ROADMAP.md  19-PROJECT-STRUCTURE.md  19-SERIALIZATION-FORMAT.md  20-THREADING-SAFETY.md  README.md
openspec/: project.md
src/: container.rs  core.rs  decoration.rs  group.rs  lib.rs  node.rs  parameter.rs  prelude.rs  subtypes.rs
src/container/: expirable.rs  list.rs  mode.rs  object.rs  reference.rs  routing.rs
src/context/: mod.rs
src/core/: error.rs  flags.rs  key.rs  metadata.rs  mod.rs  value.rs
src/decoration/: code.rs  image.rs  link.rs  notice.rs  separator.rs
src/group/: panel.rs  root.rs
src/node/: kind.rs  mod.rs  traits.rs
src/parameter/: boolean.rs  number.rs  select.rs  text.rs  vector.rs
src/runtime/: mod.rs  node.rs  state.rs
src/schema/: mod.rs
src/subtype/: file.rs  macros.rs  mod.rs  number.rs  text.rs  traits.rs  unit.rs  vector.rs
src/subtypes/: macros.rs  number.rs  text.rs  traits.rs  unit.rs  vector.rs
src/types/: kind.rs  mod.rs
tests/: leaf_parameters.rs  subtypes.rs  value_system.rs
(+69 files in other folders)
