[package]
name = "paramdef"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Type-safe parameter definition system"
repository = "https://github.com/vanyastaff/paramdef"
documentation = "https://docs.rs/paramdef"
keywords = ["parameters", "schema", "forms", "validation", "ui"]
categories = ["data-structures", "gui", "config"]
readme = "README.md"

[features]
default = []
display = []
validation = []
serde = ["dep:serde", "dep:serde_json"]
events = ["dep:tokio"]
i18n = ["dep:fluent"]
chrono = ["dep:chrono"]
full = ["display", "validation", "serde", "events", "i18n", "chrono"]

[dependencies]
smartstring = "1.0"
thiserror = "2.0"
bitflags = "2.0"

serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", optional = true, features = ["sync"] }
fluent = { version = "0.16", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
